--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	<dependency>
-      <groupId>org.hibernate.orm</groupId>
+      <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>6.2.7.Final</version>
+      <version>5.6.15.Final</version>
 	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
